# Carly-Managed_BE

./: .editorconfig  .gitattributes  .gitignore  LICENSE.md  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  tools.md  tree.txt
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  authentication.py  managers.py  models.py  schema.py  serializers.py  services.py  urls.py  validators.py  views.py
apps/accounts/migrations/: 0001_initial.py  __init__.py
apps/accounts/tests/: __init__.py  test_auth_api.py
apps/common/: __init__.py  apps.py  exceptions.py  models.py  pagination.py  throttles.py  urls.py  validators.py  views.py
apps/demo/: __init__.py  apps.py  permissions.py  serializers.py  services.py  throttles.py  urls.py  views.py
apps/demo/management/: __init__.py
apps/demo/tests/: __init__.py  test_demo_api.py  test_demo_command.py
apps/inbox/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/inbox/migrations/: 0001_initial.py  __init__.py
apps/inbox/tests/: __init__.py  test_inbox_api.py
apps/preferences/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/preferences/migrations/: 0001_initial.py  __init__.py
apps/preferences/tests/: __init__.py  test_preferences_api.py
apps/realtime/: __init__.py  apps.py  consumers.py  events.py  rate_limit.py  routing.py
apps/realtime/tests/: __init__.py  test_consumers.py
apps/workspaces/: __init__.py  admin.py  apps.py  choices.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py  __init__.py
apps/workspaces/tests/: __init__.py  test_background_tasks.py  test_workspace_api.py
config/: __init__.py  asgi.py  celery.py  environment.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
docs/: API_UEBERSICHT.md  ARCHITEKTUR.md  FRONTEND_INTEGRATION.md  QUALITAETSBERICHT.md  SECURITY.md  openapi.yml
(+2 files in other folders)
